--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -32,20 +32,27 @@
       "metadata": {
         "id": "wbvMlHd_QwMG",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 373
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "82b18c6a-f0c7-4f2c-e9da-48e5288ac443"
+        "outputId": "8bd1b80d-171d-4109-c4b3-c3827fe03ff4"
       },
       "source": [
         "import locale\n",
         "def getpreferredencoding(do_setlocale = True):\n",
         "    return \"UTF-8\"\n",
-        "locale.getpreferredencoding = getpreferredencoding%\n",
-        "pip install ultralytics\n",
+        "locale.getpreferredencoding = getpreferredencoding\n",
+        "%pip install ultralytics\n",
         "import ultralytics, torch\n",
         "ultralytics.checks()\n",
         "from ultralytics import YOLO\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "# directory setups\n",
+        "%cd /content/drive/MyDrive/abc/\n",
+        "# print cwd\n",
+        "%pwd\n",
+        "%ls -lah\n",
         "\n",
         "# # Load a model\n",
         "# model = YOLO('yolo11n.yaml')  # build a new model from scratch\n",
@@ -62,22 +69,130 @@
         "# model.train(data='coco8.yaml', epochs=3)  # train the model\n",
         "# model('https://ultralytics.com/images/bus.jpg')  # predict on an image"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NotImplementedError",
-          "evalue": "A UTF-8 locale is required. Got ANSI_X3.4-1968",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-c69baffdd8ef>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'install ultralytics'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0multralytics\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0multralytics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchecks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0multralytics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mYOLO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_line_magic\u001b[0;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[1;32m   2416\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'local_ns'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_local_scope\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2417\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2418\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2419\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2420\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/_installation_commands.py\u001b[0m in \u001b[0;36m_pip_magic\u001b[0;34m(line)\u001b[0m\n\u001b[1;32m     47\u001b[0m   \u001b[0;31m# Colab is set up such that pip does the right thing, and pip install\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m   \u001b[0;31m# will properly trigger the pip install warning.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mip\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/_shell.py\u001b[0m in \u001b[0;36msystem\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     97\u001b[0m       \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'also_return_output'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_system_commands\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_system_compat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint:disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpip_warn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/_system_commands.py\u001b[0m in \u001b[0;36m_system_compat\u001b[0;34m(shell, cmd, also_return_output)\u001b[0m\n\u001b[1;32m    452\u001b[0m   \u001b[0;31m# is expected to call this function, thus adding one level of nesting to the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m   \u001b[0;31m# stack.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 454\u001b[0;31m   result = _run_command(\n\u001b[0m\u001b[1;32m    455\u001b[0m       \u001b[0mshell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclear_streamed_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m   )\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/_system_commands.py\u001b[0m in \u001b[0;36m_run_command\u001b[0;34m(cmd, clear_streamed_output)\u001b[0m\n\u001b[1;32m    166\u001b[0m     \u001b[0mlocale_encoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlocale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpreferredencoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlocale_encoding\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0m_ENCODING\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m       raise NotImplementedError(\n\u001b[0m\u001b[1;32m    169\u001b[0m           \u001b[0;34m'A UTF-8 locale is required. Got {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocale_encoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m       )\n",
-            "\u001b[0;31mNotImplementedError\u001b[0m: A UTF-8 locale is required. Got ANSI_X3.4-1968"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ultralytics 8.3.49 🚀 Python-3.10.12 torch-2.5.1+cu121 CUDA:0 (Tesla T4, 15102MiB)\n",
+            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 33.6/112.6 GB disk)\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "/content/drive/MyDrive\n",
+            "ls: aacmp: No such file or directory\n",
+            "ls: computer-vision: No such file or directory\n",
+            "ls: raw-videos: No such file or directory\n",
+            "ls: sports-vision: No such file or directory\n",
+            "total 1.8G\n",
+            "-rw------- 1 root root 626K Feb 23  2020  00.3dm\n",
+            "-rw------- 1 root root 1.9K May 22  2023  2023-05-22T16_36_59.257Z.Desktop.md\n",
+            "-rw------- 1 root root 2.5K May 22  2023  2023-05-22T16_39_19.022Z.Desktop.md\n",
+            "-rw------- 1 root root 2.5K May 22  2023  2023-05-22T16_41_09.544Z.Desktop.md\n",
+            "-rw------- 1 root root 1.4K May 26  2023  2023-05-26T15_33_48.241Z.Desktop.md\n",
+            "-rw------- 1 root root 1.4K May 26  2023  2023-05-26T15_34_29.338Z.Desktop.md\n",
+            "-rw------- 1 root root 1.5K May 26  2023  2023-05-26T15_35_21.022Z.Desktop.md\n",
+            "-rw------- 1 root root 1.5K May 26  2023  2023-05-26T15_35_41.475Z.Desktop.md\n",
+            "-rw------- 1 root root 2.3K May 26  2023  2023-05-26T16_59_15.182Z.Desktop.md\n",
+            "-rw------- 1 root root 2.3K May 26  2023  2023-05-26T17_00_16.993Z.Desktop.md\n",
+            "-rw------- 1 root root 146K Jul 19 23:07 '4844310 (1).pdf'\n",
+            "-rw------- 1 root root 146K Jul 19 23:07  4844310.pdf\n",
+            "lrw------- 1 root root    0 Apr 25  2023  \u001b[0m\u001b[01;36maacmp\u001b[0m -> \u001b[01;34m/content/drive/.shortcut-targets-by-id/1-7gyT0gumTVYpZ6LQyuQjMOUyJ7aLxWu/aacmp\u001b[0m\u001b[K/\n",
+            "drwx------ 2 root root 4.0K Apr  5  2024  \u001b[01;34mabc\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Nov 13 16:03 \u001b[01;34m'Admission past paper'\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Jan  7  2020 \u001b[01;34m'ad_with _subs'\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Jul  1 13:13  \u001b[01;34mAI\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Mar  1  2020  \u001b[01;34mALink\u001b[0m/\n",
+            "-rw------- 1 root root 707M Apr 14  2022  Archive.zip\n",
+            "-rw------- 1 root root  182 Sep 24 14:11 'backup codes.gdoc'\n",
+            "drwx------ 2 root root 4.0K Mar 19  2019  \u001b[01;34mBDES\u001b[0m/\n",
+            "-rw------- 1 root root  182 Nov  9  2023  beeper.gdoc\n",
+            "-rw------- 1 root root  182 Mar  7  2023 'B Personal statement - Ansen Lam.gdoc'\n",
+            "-rw------- 1 root root  54M Jul 31  2020 'Bus Shelter (1).3dm'\n",
+            "-rw------- 1 root root  32M Jul 31  2020 'Bus Shelter (2).3dm'\n",
+            "-rw------- 1 root root  54M Jul 31  2020 'Bus Shelter.3dm'\n",
+            "drwx------ 2 root root 4.0K Jun  4  2024  \u001b[01;34mCalc\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K May 31  2018  \u001b[01;34mCareer\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Feb  1  2023 \u001b[01;34m'Colab Notebooks'\u001b[0m/\n",
+            "-rw------- 1 root root  30K May 11  2024  COM1028-Coursework_lam_jl03093_6842768.odt\n",
+            "lrw------- 1 root root    0 Nov  8  2023  \u001b[01;36mcomputer-vision\u001b[0m -> \u001b[01;34m/content/drive/.shortcut-targets-by-id/1T9nAqacU41nrZRuRMReIqNSoYMqZapTL/computer-vision\u001b[0m\u001b[K/\n",
+            "-rw------- 1 root root  17K Apr 16  2021  ConverLetterJIMLAM_UL_2021416.pdf\n",
+            "-rw------- 1 root root  182 Oct 20  2021 'Copy of Jim Lam.gdoc'\n",
+            "-rw------- 1 root root  182 Apr  4  2023 'Copy of Jim Statement.gdoc'\n",
+            "-rw------- 1 root root  69K Jan  3  2024  coursework-EERD.drawio\n",
+            "drwx------ 2 root root 4.0K May 20  2024 \u001b[01;34m'DATA STRUCTURES EXAM'\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K May 31  2018  \u001b[01;34mDEBATE\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Jun 27  2018 \u001b[01;34m'DECACORN STACK'\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Mar 24  2019  \u001b[01;34mDesktop\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Nov 13 16:03 \u001b[01;34m'DRIVE backup'\u001b[0m/\n",
+            "-rw------- 1 root root 1.6K Sep 30  2020  edn-to-plist.clj\n",
+            "-rw------- 1 root root  182 Mar 12  2024 'Entschuldigung, gibt es mein Cafe.gdoc'\n",
+            "-rw------- 1 root root  28K Oct 24  2023  FlimDB\n",
+            "drwx------ 2 root root 4.0K Mar  1  2020  \u001b[01;34mfrench\u001b[0m/\n",
+            "-rw------- 1 root root 384M Mar 13  2024  Germanmulticam.mp4\n",
+            "-rw------- 1 root root  206 Oct 31  2023  github-recovery-codes.txt\n",
+            "drwx------ 2 root root 4.0K Jun 29  2019 \u001b[01;34m'Google Photos'\u001b[0m/\n",
+            "drwx------ 2 root root 4.0K Dec  3  2022 \u001b[01;34m'Graduation traces'\u001b[0m/\n",
+            "-rw------- 1 root root  182 Dec  5  2023 'Group 071.gdoc'\n",
+            "-rw------- 1 root root 155K Nov 10  2018  haskell-cheatsheet.pdf\n",
+            "drwx------ 2 root root 4.0K Mar  1  2020  \u001b[01;34mHKDSE\u001b[0m/\n",
+            "-rw------- 1 root root 6.3M Mar 16  2020 'Human Deccication (1).pdf'\n",
+            "-rw------- 1 root root 5.2M Mar  9  2020 'Human Deccication.indd'\n",
+            "-rw------- 1 root root 8.0M Mar 16  2020 'Human Deccication.pdf'\n",
+            "-rw------- 1 root root 2.8M Apr 18  2024  IMG_4951.PNG\n",
+            "-rw------- 1 root root  58M Oct 13 14:34  IMG_8825.png\n",
+            "-rw------- 1 root root 1.1M Aug 12  2019 'interior design student handbook.pdf'\n",
+            "-rw------- 1 root root  182 Apr 11  2022  JimLamCV20210416.gdoc\n",
+            "-rw------- 1 root root  66K Apr 16  2021  JimLamCV20210416.pdf\n",
+            "-rw------- 1 root root  182 Mar 14  2023 'Jim Statement.gdoc'\n",
+            "-rw------- 1 root root  11M Dec 12  2020  Jonathan-S-Golan-auth-The-Linear-Algebra-a-Beginning-Graduate-Student-Ought-to-Know-Springer-Netherlands-2012.pdf\n",
+            "-rw------- 1 root root 141M Mar 17  2020  JOnny.pdf\n",
+            "-rw------- 1 root root 555K Sep 15  2021  Master_Thesis_final.DOCX\n",
+            "-rw------- 1 root root  182 Oct 25  2022 'Mein Lieblingstagebuch:.gdoc'\n",
+            "drwx------ 2 root root 4.0K Nov 13 16:03  \u001b[01;34mmotion.source\u001b[0m/\n",
+            "-rw------- 1 root root 108M Oct  1  2020  motion.source.zip\n",
+            "drwx------ 2 root root 4.0K Apr 18  2024  \u001b[01;34mNotes\u001b[0m/\n",
+            "-rw------- 1 root root 4.1M Aug  1  2020  ohch.3dm\n",
+            "-r-------- 1 root root  21M Aug 20  2017  os3.pdf\n",
+            "-rw------- 1 root root 6.3M Mar 16  2020  Pond.pdf\n",
+            "drwx------ 2 root root 4.0K Mar  1  2020  \u001b[01;34mPortfolio\u001b[0m/\n",
+            "-rw------- 1 root root 2.9M Jul 24  2020 'Preview from mid level.png'\n",
+            "-rw------- 1 root root 4.4M Jul 25  2020  Process.3dm\n",
+            "-rw------- 1 root root  182 Sep  4  2023 'Prospective properties.gsheet'\n",
+            "lrw------- 1 root root    0 Jan 12  2024  \u001b[01;36mraw-videos\u001b[0m -> \u001b[01;34m/content/drive/.shortcut-targets-by-id/12E54ZCmPT3HGhbbWx600w_fvykHO13iK/raw-videos\u001b[0m\u001b[K/\n",
+            "drwx------ 2 root root 4.0K Mar 17  2020  \u001b[01;34mRefined\u001b[0m/\n",
+            "-rw------- 1 root root  182 Apr 16  2021  Resume.gdoc\n",
+            "-rw------- 1 root root  182 Mar  1  2020 'Rocket Specs.gsheet'\n",
+            "drwx------ 2 root root 4.0K Jan 19  2024  \u001b[01;34mROOMDAMAGELOG\u001b[0m/\n",
+            "-rw------- 1 root root 739K Nov 18 23:10  RPO3UCubeSatReqsPrelim.docx\n",
+            "-rw------- 1 root root 184M Mar 12  2024  sample.mp4\n",
+            "drwx------ 2 root root 4.0K Mar  1  2020  \u001b[01;34mSONA\u001b[0m/\n",
+            "lrw------- 1 root root    0 Jan 19  2024  \u001b[01;36msports-vision\u001b[0m -> \u001b[01;34m/content/drive/.shortcut-targets-by-id/11gyk2GZpCiiqu7ybRPNd_BQV_n3VEPY9/sports-vision\u001b[0m\u001b[K/\n",
+            "drwx------ 2 root root 4.0K May 31  2018  \u001b[01;34mSSGC\u001b[0m/\n",
+            "-rw------- 1 root root 455K Mar  8  2020 'stadium (1).3dm'\n",
+            "-rw------- 1 root root 319K Mar  8  2020 'stadium (1).3dmbak'\n",
+            "-rw------- 1 root root 3.9M Jan 19  2024  surreyID.JPG\n",
+            "-rw------- 1 root root  182 Mar 22  2023 'Take some ideas from GPT-4:.gdoc'\n",
+            "-rw------- 1 root root 8.7M Aug  1  2020  temp.3dm\n",
+            "-rw------- 1 root root 4.1M Jul 24  2020 'temp copy.3dm'\n",
+            "drwx------ 2 root root 4.0K Mar  1  2020 \u001b[01;34m'Tick Tsui'\u001b[0m/\n",
+            "-rw------- 1 root root  182 May 28  2020 'To Kill A Mockingbird - Full Text PDF.gdoc'\n",
+            "-rw------- 1 root root 492K May 28  2020 'To Kill A Mockingbird - Full Text PDF.pdf'\n",
+            "-rw------- 1 root root 8.5M Jul 23  2020  trial.3dm\n",
+            "-rw------- 1 root root 2.7M Jul 22  2020  Untitled.3dm\n",
+            "-rw------- 1 root root  182 Nov 16  2023 'Untitled document (1).gdoc'\n",
+            "-rw------- 1 root root  182 Aug 25  2023 'Untitled document (2).gdoc'\n",
+            "-rw------- 1 root root  182 Mar 19  2023 'Untitled document (3).gdoc'\n",
+            "-rw------- 1 root root  182 Mar  2  2023 'Untitled document (4).gdoc'\n",
+            "-rw------- 1 root root  182 Apr  2  2022 'Untitled document (5).gdoc'\n",
+            "-rw------- 1 root root  182 Sep  5  2020 'Untitled document (6).gdoc'\n",
+            "-rw------- 1 root root  182 Mar  9  2020 'Untitled document (7).gdoc'\n",
+            "-rw------- 1 root root  182 Dec 22  2018 'Untitled document (8).gdoc'\n",
+            "-rw------- 1 root root  182 Sep  1 17:29 'Untitled document.gdoc'\n",
+            "-rw------- 1 root root  182 Oct 10  2022 'Untitled form.gform'\n",
+            "-rw------- 1 root root  182 Oct 24  2023 'Untitled spreadsheet.gsheet'\n",
+            "drwx------ 2 root root 4.0K Sep 17  2023 \u001b[01;34m'U of Surrey Year 1'\u001b[0m/\n",
+            "-rw------- 1 root root  182 Mar 23  2022 'Writing boost.gdoc'\n",
+            "drwx------ 2 root root 4.0K Mar 11  2020 \u001b[01;34m'YR 2 studio'\u001b[0m/\n"
           ]
         }
       ]
